# ergocub-cartesian-control

./: .gitignore  404.html  CMakeLists.txt  Dockerfile  README.md  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docker.yml  gh-pages.yml  main.yml
ControlInterface/: index.html
cmake/: ergocub-cartesian-controlConfig.cmake.in
docker/: Dockerfile
docs/: ControlInterface.md  index.md
scripts/: add_license.py
search/: search_index.json
src/cub_joint_control/: CMakeLists.txt
src/cub_joint_control/include/cub-joint-control/: cubJointControl.h  jointControl.h
src/cub_joint_control/src/: cubJointControl.cpp
src/ergocub_bimanual_service/: CMakeLists.txt  service_index.txt
src/ergocub_bimanual_service/include/mc-ergocub-bimanual-service/: ergoCubBimanualService.h
src/ergocub_bimanual_service/mc-ergocub-bimanual-service/: service.thrift
src/ergocub_bimanual_service/src/: ergoCubBimanualService.cpp
src/ergocub_cartesian_bimanual/: CMakeLists.txt  test_check_and_read_inputs.py
src/ergocub_cartesian_bimanual/app/: CMakeLists.txt
src/ergocub_cartesian_bimanual/app/conf/real/: common.ini  config_only_yaw.ini  left_arm.ini  right_arm.ini  torso.ini  torso_only_yaw.ini
src/ergocub_cartesian_bimanual/app/conf/sim/: common.ini  config_no_torso.ini  config_only_yaw.ini  config_r1.ini  left_arm.ini  left_arm_r1.ini  right_arm.ini  right_arm_r1.ini  torso.ini  torso_only_yaw.ini  torso_r1.ini
src/ergocub_cartesian_bimanual/include/: BimanualIK.h  DifferentialInverseKinematicsQP.h  ForwardKinematics.h  ForwardKinematicsiDynTree.h  module.h
src/ergocub_cartesian_bimanual/include/ergocub_cartesian_bimanual/: BimanualIK.h  DifferentialInverseKinematicsQP.h  ForwardKinematics.h  ForwardKinematicsiDynTree.h  Integrator.h  module.h
src/ergocub_cartesian_bimanual/python/: pybind_module.cpp
src/ergocub_cartesian_bimanual/src/: BimanualIK.cpp  DifferentialInverseKinematicsQP.cpp  ForwardKinematicsiDynTree.cpp  Integrator.cpp  main.cpp  module.cpp  module_query.cpp  module_service.cpp
src/ergocub_cartesian_control/: CMakeLists.txt
src/ergocub_cartesian_control/app/conf/: config_left.ini  config_left_no_torso.ini  config_left_r1.ini  config_left_sim.ini  config_left_sim_no_torso.ini  config_left_sim_r1.ini  config_right.ini  config_right_no_torso.ini  config_right_r1.ini  config_right_sim.ini  config_right_sim_no_torso.ini  config_right_sim_r1.ini
src/ergocub_cartesian_control/app/conf/real/: common_right.ini  config_left_ergoCub.ini  config_left_r1.ini  config_right_ergoCub.ini  config_right_r1.ini
src/ergocub_cartesian_control/app/conf/sim/: common_left.ini  common_right.ini  config_left_ergoCub.ini  config_left_r1.ini  config_right_ergoCub.ini  config_right_r1.ini
src/ergocub_cartesian_control/include/: DifferentialInverseKinematics.h  DifferentialInverseKinematicsQP.h  ForwardKinematics.h  ForwardKinematicsiDynTree.h  module.h
src/ergocub_cartesian_control/src/: DifferentialInverseKinematicsQP.cpp  ForwardKinematicsiDynTree.cpp  main.cpp  module.cpp  module_service.cpp
src/ergocub_cartesian_service/: CMakeLists.txt  service_index.txt
src/ergocub_cartesian_service/gb-ergocub-cartesian-service/: service.thrift
src/ergocub_cartesian_service/include/gb-ergocub-cartesian-service/: ReachabilityEvaluationState.h  ergoCubCartesianService.h
src/ergocub_cartesian_service/src/: ReachabilityEvaluationState.cpp  ergoCubCartesianService.cpp
src/ergocub_finger_controller/: CMakeLists.txt  README.md  main.cpp  module.cpp
src/ergocub_finger_controller/config/: ergocub_finger_controller.ini  ergocub_finger_controller_left.ini  ergocub_finger_controller_right.ini  ergocub_finger_controller_sim.ini  ergocub_finger_controller_sim_left.ini  ergocub_finger_controller_sim_right.ini
src/ergocub_finger_controller/include/: module.h
src/ergocub_head_controller/: CMakeLists.txt
src/ergocub_head_controller/app/conf/: common.ini  config.ini  config_sim.ini  ik_parameters.ini
src/ergocub_head_controller/include/: forwardKinematics.h  inverseKinematics.h  inverseKinematicsParameters.h  io.h  module.h
src/ergocub_head_controller/src/: forwardKinematics.cpp  inverseKinematics.cpp  inverseKinematicsParameters.cpp  io.cpp  main.cpp  module.cpp  module_service.cpp
src/ergocub_head_service/: CMakeLists.txt
src/ergocub_head_service/mc-ergocub-head-service/: service.thrift
src/r1_cartesian_control/: CMakeLists.txt
src/r1_cartesian_control/app/conf/: config_left.ini  config_left_sim_r1.ini  config_left_sim_r1_hand_pointing.ini  config_right.ini  config_right_sim_r1.ini  config_right_sim_r1_hand_pointing.ini
src/r1_cartesian_control/include/: DifferentialInverseKinematics.h  DifferentialInverseKinematicsQP.h  ForwardKinematics.h  ForwardKinematicsiDynTree.h  Integrator.h  module.h
src/r1_cartesian_control/src/: DifferentialInverseKinematicsQP.cpp  ForwardKinematicsiDynTree.cpp  Integrator.cpp  main.cpp  module.cpp  module_service.cpp
src/trajectory_generator/: CMakeLists.txt
src/trajectory_generator/include/trajectory-generator/: orientationTrajectoryGenerator.h  polynomial.h  positionTrajectoryGenerator.h
src/trajectory_generator/src/: orientationTrajectoryGenerator.cpp  polynomial.cpp  positionTrajectoryGenerator.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: utils.h  utils.hpp
src/utils/src/: utils.cpp
tests/misc/: check_license.pl  check_license_skip.txt  check_style.pl
tests/python/: config_real.py  test_ik.py
